Bug 1238428 Workaround NS_APP_PROFILE_DEFAULTS_50_DIR directory key removed in Bug 1234012 r=IanN